# database-manager

./: .gitignore  .main.cpp.swp  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  TODO.txt  cmake_install.cmake  dev_copy.sql  guard.h  main.cpp  oldcmakelist.txt  packer.h
cmake/: database_manager_core-config.cmake
enc_temp_folder/e521cf8963b0a152bf3f821b545d28/: AddDrawingPageWidget.cpp
in/: clientMeta-local.json.in  clientMeta-server.json.in  installer.nsis.in  serverMeta.json.in
include/: Client.h  NetworkMessage.h  Server.h  TCPSocket.h
include/database/: ComboboxDataSource.h  DataSource.h  DatabaseManager.h  DatabaseQuery.h  DatabaseRequestHandler.h  DatabaseResponseHandler.h  Drawing.h  DrawingComponentManager.h  DrawingPDFWriter.h  DrawingSearchResultsModel.h  ExtraPriceManager.h  Logger.h  RequestType.h  componentFilters.h  drawingComponents.h
include/networking/: Client.h  NetworkMessage.h  Server.h  TCPSocket.h
include/util/: DataSerialiser.h  format.h
res/: qtresources.qrc  resources.rc
sql/: get_drawing_summary.sql
src/: Client.cpp  NetworkMessage.cpp  Server.cpp  TCPSocket.cpp
src/database/: ComboboxDataSource.cpp  DatabaseManager.cpp  DatabaseQuery.cpp  DatabaseRequestHandler.cpp  DatabaseResponseHandler.cpp  Drawing.cpp  DrawingPDFWriter.cpp  DrawingSearchResultsModel.cpp  ExtraPriceManager.cpp  Logger.cpp  componentFilters.cpp  drawingComponents.cpp
src/networking/: Client.cpp  NetworkMessage.cpp  Server.cpp  TCPSocket.cpp
ui/: AddApertureWindow.cpp  AddApertureWindow.h  AddApertureWindow.ui  AddComponentWindow.cpp  AddComponentWindow.h  AddComponentWindow.ui  AddExtraPriceWindow.cpp  AddExtraPriceWindow.h  AddExtraPriceWindow.ui  AddLabourTimesWindow.cpp  AddLabourTimesWindow.h  AddLabourTimesWindow.ui  AddMachineWindow.cpp  AddMachineWindow.h  AddMachineWindow.ui  AddMaterialPriceWindow.cpp  AddMaterialPriceWindow.h  AddMaterialPriceWindow.ui  AddMaterialWindow.cpp  AddMaterialWindow.h  AddMaterialWindow.ui  AddSideIronPriceWindow.cpp  AddSideIronPriceWindow.h  AddSideIronPriceWindow.ui  AddSideIronWindow.cpp  AddSideIronWindow.h  AddSideIronWindow.ui  AddSpecificSideIronPriceWindow.cpp  AddSpecificSideIronPriceWindow.h  AddSpecificSideIronPriceWindow.ui  ExtraPricingWindow.cpp  ExtraPricingWindow.h  ExtraPricingWindow.ui  Helper.cpp  Helper.h  LabourTimesWindow.cpp  LabourTimesWindow.h  LabourTimesWindow.ui  MainMenu.cpp  MainMenu.h  (+13 more)
ui/widgets/: ActivatorLabel.cpp  ActivatorLabel.h  AddDrawingPageWidget.cpp  AddDrawingPageWidget.h  AddDrawingPageWidget.ui  AddDrawingPageWidget.ui.autosave  AddLapWidget.cpp  AddLapWidget.h  DimensionLine.cpp  DimensionLine.h  DrawingNumberInput.cpp  DrawingNumberInput.h  DrawingSearchResultsModel.cpp  DrawingSearchResultsModel.h  DrawingView.cpp  DrawingView.h  DrawingViewWidget.cpp  DrawingViewWidget.h  DrawingViewWidget.ui  DynamicComboBox.cpp  DynamicComboBox.h  ExpandingWidget.cpp  ExpandingWidget.h  ImpactPadGraphicsItem.cpp  ImpactPadGraphicsItem.h  Inspector.cpp  Inspector.h  PdfView.cpp  PdfView.h
ui/widgets/addons/: AreaGraphicsItem.cpp  AreaGraphicsItem.h  BlankSpaceGraphicsItem.cpp  BlankSpaceGraphicsItem.h  CentreHoleSetGraphicsItem.cpp  CentreHoleSetGraphicsItem.h  DamBarGraphicsItem.cpp  DamBarGraphicsItem.h  DeflectorSetGraphicsItem.cpp  DeflectorSetGraphicsItem.h  DivertorSetGraphicsItem.cpp  DivertorSetGraphicsItem.h  EventTracker.cpp  EventTracker.h  ExtraApertureGraphicsItem.cpp  ExtraApertureGraphicsItem.h  GroupGraphicsItem.cpp  GroupGraphicsItem.h  ImpactPadGraphicsItem.cpp  ImpactPadGraphicsItem.h
